# mcp-gateway-registry

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/skills/usage-report/: SKILL.md  analyze_telemetry.py
.github/workflows/: helm-chart-update.yml
agents/a2a/src/flight-booking-agent/: tools.py
agents/a2a/src/travel-assistant-agent/: agent.py  remote_agent_client.py  server.py  tools.py
api/: registry_client.py  registry_management.py
auth_server/: .env.template  oauth2_providers.yml  server.py
auth_server/providers/: __init__.py  auth0.py  factory.py  okta.py
charts/auth-server/: values.yaml
charts/auth-server/templates/: secret.yaml
charts/registry/: values.yaml
charts/registry/templates/: secret.yaml
cli/: test_asor_complete.py
cli/agentcore/: __init__.py  __main__.py  discovery.py  models.py  registration.py  sync.py  token_refresher.py
credentials-provider/: add_noauth_services.py
credentials-provider/agentcore-auth/: get_m2m_token.py
credentials-provider/auth0/: README.md  __init__.py  get_m2m_token.py
credentials-provider/keycloak/: get_m2m_token.py
credentials-provider/oauth/: egress_oauth.py  generic_oauth_flow.py
docker/: nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf
docs/: agentcore-auto-registration-prerequisites.md  agentcore.md  auth0-m2m-setup.md  auth0.md  mongodb-m2m-collections.md
docs/design/: agentcore-scanner-design.md  hybrid-search-architecture.md
frontend/: package-lock.json  package.json
frontend/src/components/: AgentCard.tsx  ServerCard.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx
metrics-service/: create_api_key.py
metrics-service/app/api/: routes.py
metrics-service/app/utils/: helpers.py
metrics-service/tests/: test_auth.py
registry/: main.py
registry/api/: agent_routes.py  auth0_m2m_routes.py  federation_routes.py  management_routes.py  server_routes.py
registry/auth/: dependencies.py  routes.py
registry/repositories/documentdb/: search_repository.py
registry/schemas/: idp_m2m_client.py  okta_m2m_client.py
registry/services/: auth0_m2m_sync.py  okta_m2m_sync.py
registry/static/: asset-manifest.json  index.html
registry/static/static/css/: main.57cd5cd7.css  main.57cd5cd7.css.map  main.c5b04c2a.css  main.c5b04c2a.css.map
registry/static/static/js/: main.1ee9a873.js  main.1ee9a873.js.map  main.ed95987f.js  main.ed95987f.js.map
registry/utils/: auth0_manager.py  iam_manager.py
servers/currenttime/: pyproject.toml
servers/fininfo/: encrypt_secrets.py  secrets_manager.py
servers/mcpgw/: pyproject.toml  server.py
terraform/aws-ecs/: alb-logging.tf  cloudfront-logging.tf  cloudfront.tf  codebuild.tf  documentdb.tf  ecs.tf  keycloak-alb.tf  keycloak-database.tf  keycloak-ecr.tf  keycloak-ecs.tf  keycloak-security-groups.tf  main.tf  secret-rotation.tf  terraform.tfvars.example  variables.tf  vpc.tf
terraform/aws-ecs/lambda/rotate-documentdb/: index.py
terraform/aws-ecs/modules/mcp-gateway/: ecs-services.tf  iam.tf  monitoring.tf  networking.tf  observability.tf  secrets.tf  storage.tf  variables.tf
terraform/telemetry-collector/bastion-scripts/: telemetry_db.py
tests/auth_server/: conftest.py
tests/auth_server/unit/providers/: test_auth0.py  test_keycloak.py
tests/integration/: test_agentcore_sync_integration.py  test_telemetry_e2e.py
tests/unit/api/: test_agent_routes.py
tests/unit/cli/: test_agentcore_cross_account.py  test_agentcore_discovery.py  test_agentcore_registration.py  test_agentcore_token_refresher.py
tests/unit/core/: test_nginx_service.py
tests/unit/repositories/: test_search_result_distribution.py
tests/unit/servers/mcpgw/: test_intelligent_tool_finder.py
