[project]
name = "current-time-mcp"
version = "0.1.0"
description = "MCP server to get current time from the timeapi.io API"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.11.3",
    "pytz>=2025.2",
    "pyjwt>=2.12.0",
]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false
